# dalamud-repo-manager

./: .gitignore  Cargo.toml  readme.md
src/: lib.rs  main.rs  snip.rs
src/modal/: json_repo.rs  mod.rs
