[package]
edition = "2021"
name = "dalamud-repo-manager"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking", "json"]}
serde = {version = "1.0.130", features = ['derive']}
tokio = {version = "1", features = ["full"]}
toml = {version = "0.5.8"}
